updating live site

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                     defaultCity()
                 })
         }
+        
+        //handling search
         const searchButton = document.getElementById('search-btn')
         searchButton.addEventListener('click', function () {
             searchCity()
