--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
         searchButton.addEventListener('click', function () {
             searchCity()
         })
+        document.getElementById('get-city-name').addEventListener('keypress', function (event) {
+            if(event.key == 'Enter')
+            searchCity()git a
+        })
     </script>
 </body>
 
