--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         document.getElementById('get-city-name').addEventListener('keypress', function (event) {
             if (event.key == 'Enter')
             {
+                event.preventDefault()
                 searchCity()
             }
         })
